# GalaxyScraper

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  Main.cpp  resource.rc
Source/AIControllers/: IAIController.h  IAISlotController.h
Source/AIControllers/AISlots/: Slot.cpp  Slot.h
Source/AIControllers/ArachnidBehaviour/: ArachnidBehaviour.cpp  ArachnidBehaviour.h
Source/AIControllers/AssBehaviour/: AssBehaviour.cpp  AssBehaviour.h
Source/AIControllers/BoilerBehaviour/: BoilerBehaviour.cpp  BoilerBehaviour.h
Source/AIControllers/CanonBallBehaviour/: CanonBallBehaviour.cpp  CanonBallBehaviour.h
Source/AIControllers/FireBallBehaviour/: FireballBehaviour.cpp  FireballBehaviour.h
Source/AIControllers/FirePlatformBehaviour/: FirePlatformBehaviour.cpp  FirePlatformBehaviour.h  FixedFirePlatformBehaviour.cpp  FixedFirePlatformBehaviour.h  SequencedFirePlatformBehaviour.cpp  SequencedFirePlatformBehaviour.h
Source/AIControllers/MouthBehaviour/: MouthBehaviour.cpp  MouthBehaviour.h
Source/AIControllers/SpherePatrolman/: SpherePatrolman.cpp  SpherePatrolman.h
Source/AnimationControllers/: IAnimationController.h
Source/AnimationControllers/AssAnimation/: AssAnimation.cpp  AssAnimation.h  AssDefines.h
Source/AnimationControllers/BoilerAnimation/: BoilerAnimation.cpp  BoilerAnimation.h  BoilerStates.h
Source/AnimationControllers/BushAnimation/: BushAnimation.cpp  BushAnimation.h
Source/AnimationControllers/EnemyAnimation/: EnemyAnimation.cpp  EnemyAnimation.h  StatesDefines.h
Source/Camera/: Camera.cpp  Camera.h  ICamera.h  OrthogonalCamera.cpp  OrthogonalCamera.h
Source/CameraControllers/: ICameraController.h
Source/Directx/: DirectInput.cpp  DirectInput.h  DirectXInput.h  Directx.h  SimpleMath.h
Source/Directx/D3DX/: D3DXEffect.h  (+1 more)
Source/Factories/: AnimationStateGraphFactory.cpp  AnimationStateGraphFactory.h  CalCoreModelFactory.cpp  CalCoreModelFactory.h  CollisionShapeFactory.cpp  CollisionShapeFactory.h  EffectFactory.cpp  EffectFactory.h  MeshFactory.cpp  MeshFactory.h  ParticleFactory.cpp  ParticleFactory.h  QuadFactory.cpp  QuadFactory.h  TextureFactory.cpp  TextureFactory.h
Source/Frustum/: BackSideFrustum.cpp  BackSideFrustum.h  Frustum.cpp  Frustum.h
Source/Game/: Game.cpp  Game.h
Source/GameState/: CreditsState.cpp  CreditsState.h  IGameState.cpp  IGameState.h  IuranusToBoilerTransitionState.cpp  IuranusToBoilerTransitionState.h  MenuState.cpp  MenuState.h  OptionsState.cpp  OptionsState.h  TestBoilerPlanetState.cpp  TestBoilerPlanetState.h  TestBoilerState.cpp  TestBoilerState.h  TestROAState.cpp  TestROAState.h
Source/Global/: Definitions.h  GlobalFunctions.cpp  GlobalFunctions.h  GlobalVariables.cpp  GlobalVariables.h  VertexTypes.cpp  VertexTypes.h
Source/IO/: IOStatus.cpp  IOStatus.h
Source/Managers/: DataLocatorManager.cpp  DataLocatorManager.h  ParticlesManager.cpp  ParticlesManager.h  PlanetAtmosphereManager.cpp  PlanetAtmosphereManager.h  PlanetManager.cpp  PlanetManager.h  SoundManager.cpp  SoundManager.h  Static2DObjectManager.cpp  Static2DObjectManager.h  StaticObjectManager.cpp  StaticObjectManager.h
Source/Material/: Material.cpp  Material.h
Source/Mesh/: IMesh.cpp  IMesh.h
Source/Object/: Object.cpp  Object.h
Source/Particles/: IParticles.cpp  IParticles.h
Source/PlayerControllers/: IPlayerController.h
Source/UI/: BoilerUI.cpp  BoilerUI.h  IuranusUI.cpp  IuranusUI.h
Source/World/: World.cpp  World.h
Source/XMLParser/: XMLParser.cpp
(+702 files in other folders)
